Fixed boxes being aligned to the left

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,6 @@ a {
     padding: 10px;
     padding-left: 120px;
     padding-right: 120px;
-    overflow: hidden;
 }
 
 .information{
@@ -102,7 +101,6 @@ figcaption {
     text-align: center;
     font-family: 'Roboto', sans-serif;
     color: #1F2937;
-    opacity: 1;
 }
 
 img {
@@ -117,10 +115,6 @@ img {
 
 .boxes {
     display: flex;
-    justify-content: space-between;
+    text-align: center;
+    justify-content: center;
 }
-
-
-
-
-
